--- a/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
+++ b/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
@@ -39,7 +39,8 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI2
 Mcu.IP5=SYS
 Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP7=USART6
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -47,8 +48,10 @@ Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=PD13
 Mcu.Pin11=PD14
 Mcu.Pin12=PD15
-Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PC4
@@ -57,7 +60,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PD12
-Mcu.PinsNb=15
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -105,6 +108,10 @@ PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC5.GPIO_PuPd=GPIO_PULLUP
 PC5.Locked=true
 PC5.Signal=GPXTI5
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
 PD12.GPIOParameters=GPIO_Label
 PD12.GPIO_Label=LED_POWER
 PD12.Locked=true
@@ -197,9 +204,11 @@ SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USART6.IPParameters=VirtualMode
+USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
-isbadioc=false
+isbadioc=true
