--- a/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
+++ b/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
@@ -1,7 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART2_TX
 Dma.Request1=USART2_RX
-Dma.RequestsNb=2
+Dma.Request2=USART6_RX
+Dma.Request3=USART6_TX
+Dma.RequestsNb=4
 Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.1.Instance=DMA1_Stream5
@@ -22,6 +24,26 @@ Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.2.Instance=DMA2_Stream1
+Dma.USART6_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.2.Mode=DMA_NORMAL
+Dma.USART6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.3.Instance=DMA2_Stream6
+Dma.USART6_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.3.Mode=DMA_NORMAL
+Dma.USART6_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configTIMER_TASK_PRIORITY,Timers01
 FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=myTimer01,Callback01,osTimerPeriodic,Default,NULL,Dynamic,NULL
@@ -69,6 +91,8 @@ MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -83,6 +107,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
@@ -160,7 +185,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -211,4 +236,4 @@ VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
-isbadioc=true
+isbadioc=false
