--- a/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
+++ b/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
@@ -1,51 +1,33 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=USART2_TX
-Dma.Request1=USART2_RX
-Dma.Request2=USART6_RX
-Dma.Request3=USART6_TX
-Dma.RequestsNb=4
-Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.1.Instance=DMA1_Stream5
-Dma.USART2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.1.Mode=DMA_NORMAL
-Dma.USART2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_TX.0.Instance=DMA1_Stream6
-Dma.USART2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.0.Mode=DMA_NORMAL
-Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART6_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_RX.2.Instance=DMA2_Stream1
-Dma.USART6_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART6_RX.2.Mode=DMA_NORMAL
-Dma.USART6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_RX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART6_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_TX.3.Instance=DMA2_Stream6
-Dma.USART6_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART6_TX.3.Mode=DMA_NORMAL
-Dma.USART6_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART6_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FATFS.IPParameters=_MAX_SS
-FATFS._MAX_SS=4096
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
+Dma.MEMTOMEM.0.Direction=DMA_MEMORY_TO_MEMORY
+Dma.MEMTOMEM.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.MEMTOMEM.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.MEMTOMEM.0.Instance=DMA2_Stream0
+Dma.MEMTOMEM.0.MemBurst=DMA_MBURST_SINGLE
+Dma.MEMTOMEM.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.MEMTOMEM.0.MemInc=DMA_MINC_ENABLE
+Dma.MEMTOMEM.0.Mode=DMA_NORMAL
+Dma.MEMTOMEM.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.MEMTOMEM.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.MEMTOMEM.0.PeriphInc=DMA_PINC_ENABLE
+Dma.MEMTOMEM.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=MEMTOMEM
+Dma.Request1=USART2_TX
+Dma.RequestsNb=2
+Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.1.Instance=DMA1_Stream6
+Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.1.Mode=DMA_NORMAL
+Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configTIMER_TASK_PRIORITY,Timers01
 FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=myTimer01,Callback01,osTimerPeriodic,Default,NULL,Dynamic,NULL
@@ -55,19 +37,17 @@ FREERTOS.configUSE_TIMERS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
-Mcu.IP1=FATFS
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IP8=USART6
-Mcu.IP9=USB_HOST
-Mcu.IPNb=11
+Mcu.IP1=FREERTOS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IP7=USART6
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -77,14 +57,9 @@ Mcu.Pin11=PD14
 Mcu.Pin12=PD15
 Mcu.Pin13=PC6
 Mcu.Pin14=PC7
-Mcu.Pin15=PA9
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=VP_FATFS_VS_USB
-Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin3=PA3
 Mcu.Pin4=PC4
 Mcu.Pin5=PC5
@@ -92,44 +67,34 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PD12
-Mcu.PinsNb=22
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true
-NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA11.Mode=Host_Only
-PA11.Signal=USB_OTG_FS_DM
-PA12.Mode=Host_Only
-PA12.Signal=USB_OTG_FS_DP
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA9.Mode=Activate_VBUS
-PA9.Signal=USB_OTG_FS_VBUS
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -197,12 +162,15 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=iVIS.ioc
 ProjectManager.ProjectName=iVIS
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -219,7 +187,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
@@ -228,6 +196,7 @@ RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=168000000
@@ -239,28 +208,20 @@ RCC.VcooutputI2S=192000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI2.CLKPolarity=SPI_POLARITY_LOW
 SPI2.CalculateBaudRate=5.25 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
-USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_FS,VirtualModeFS
-USB_HOST.USBH_HandleTypeDef-MSC_FS=hUsbHostFS
-USB_HOST.VirtualModeFS=Msc
-USB_OTG_FS.IPParameters=VirtualMode,phy_itface
-USB_OTG_FS.VirtualMode=Host_Only
-USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
-VP_FATFS_VS_USB.Mode=USB
-VP_FATFS_VS_USB.Signal=FATFS_VS_USB
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_HOST_VS_USB_HOST_MSC_FS.Mode=MSC_FS
-VP_USB_HOST_VS_USB_HOST_MSC_FS.Signal=USB_HOST_VS_USB_HOST_MSC_FS
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
