activated debug uart line tx dma, but not used now

--- a/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
+++ b/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
@@ -207,9 +207,9 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CLKPolarity=SPI_POLARITY_LOW
-SPI2.CalculateBaudRate=5.25 MBits/s
+SPI2.CalculateBaudRate=10.5 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI2.Mode=SPI_MODE_MASTER
@@ -224,4 +224,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 rtos.0.ip=FREERTOS
-isbadioc=false
+isbadioc=true
