--- a/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
+++ b/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
@@ -17,7 +17,18 @@ Dma.MEMTOMEM.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.Request0=MEMTOMEM
 Dma.Request1=USART2_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI3_TX
+Dma.RequestsNb=3
+Dma.SPI3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI3_TX.2.Instance=DMA1_Stream5
+Dma.SPI3_TX.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.2.Mode=DMA_CIRCULAR
+Dma.SPI3_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI3_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_TX.1.Instance=DMA1_Stream6
@@ -36,44 +47,69 @@ FREERTOS.configTOTAL_HEAP_SIZE=32000
 FREERTOS.configUSE_TIMERS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2S2.AudioFreq=I2S_AUDIOFREQ_44K
+I2S2.ErrorAudioFreq=0.26 %
+I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq
+I2S2.Instance=SPI$Index
+I2S2.RealAudioFreq=44.117 KHz
+I2S2.VirtualMode=I2S_MODE_MASTER
+I2S3.AudioFreq=I2S_AUDIOFREQ_44K
+I2S3.ErrorAudioFreq=0.26 %
+I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq
+I2S3.Instance=SPI$Index
+I2S3.RealAudioFreq=44.117 KHz
+I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IP7=USART6
-Mcu.IPNb=8
+Mcu.IP2=I2C1
+Mcu.IP3=I2S2
+Mcu.IP4=I2S3
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PD13
-Mcu.Pin11=PD14
-Mcu.Pin12=PD15
-Mcu.Pin13=PC6
-Mcu.Pin14=PC7
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PC4
-Mcu.Pin5=PC5
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PD12
-Mcu.PinsNb=17
+Mcu.Pin10=PC5
+Mcu.Pin11=PB10
+Mcu.Pin12=PB12
+Mcu.Pin13=PD12
+Mcu.Pin14=PD13
+Mcu.Pin15=PD14
+Mcu.Pin16=PD15
+Mcu.Pin17=PC7
+Mcu.Pin18=PC10
+Mcu.Pin19=PC12
+Mcu.Pin2=PC3
+Mcu.Pin20=PD4
+Mcu.Pin21=PB6
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PC4
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -89,21 +125,38 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PB13.Locked=true
-PB13.Mode=Full_Duplex_Master
-PB13.Signal=SPI2_SCK
-PB14.Locked=true
-PB14.Mode=Full_Duplex_Master
-PB14.Signal=SPI2_MISO
-PB15.Locked=true
-PB15.Mode=Full_Duplex_Master
-PB15.Signal=SPI2_MOSI
+PA4.Mode=Half_Duplex_Master
+PA4.Signal=I2S3_WS
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
+PB10.Mode=Half_Duplex_Master
+PB10.Signal=I2S2_CK
+PB12.Mode=Half_Duplex_Master
+PB12.Signal=I2S2_WS
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC10.Mode=Half_Duplex_Master
+PC10.Signal=I2S3_CK
+PC12.Mode=Half_Duplex_Master
+PC12.Signal=I2S3_SD
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=PDM_OUT [MP45DT02_OUT]
+PC3.Mode=Half_Duplex_Master
+PC3.Signal=I2S2_SD
 PC4.GPIOParameters=PinState,GPIO_Label
 PC4.GPIO_Label=ENJ_CS
 PC4.Locked=true
@@ -115,10 +168,8 @@ PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC5.GPIO_PuPd=GPIO_PULLUP
 PC5.Locked=true
 PC5.Signal=GPXTI5
-PC6.Mode=Asynchronous
-PC6.Signal=USART6_TX
-PC7.Mode=Asynchronous
-PC7.Signal=USART6_RX
+PC7.Mode=Master_Clock_Activated
+PC7.Signal=I2S3_MCK
 PD12.GPIOParameters=GPIO_Label
 PD12.GPIO_Label=LED_POWER
 PD12.Locked=true
@@ -135,6 +186,10 @@ PD15.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=LED_INFO
 PD15.Locked=true
 PD15.Signal=GPIO_Output
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
+PD4.Locked=true
+PD4.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -170,7 +225,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_I2S3_Init-I2S3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -207,17 +262,14 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CLKPolarity=SPI_POLARITY_LOW
-SPI2.CalculateBaudRate=10.5 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=21.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART6.IPParameters=VirtualMode
-USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
